[project]
name = "ComfyUI-ImageAlphaCrop"
description = "ComfyUI plugin for automatically cropping transparent alpha channel borders from images - ideal for processing logos and icons. Supports batch processing with adjustable padding and alpha threshold. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 



[project.urls]
Repository = "https://github.com/swan7-py/ComfyUI-ImageAlphaCrop"
#  Used by Comfy Registry https://registry.comfy.org


[tool.comfy]
PublisherId = "swan7-py"
DisplayName = "ComfyUI-ImageAlphaCrop"
Icon = ""
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

