[project]
name = "ComfyUI-ImageAlphaCrop"
description = "ComfyUI的插件，提供透明图像边缘裁切功能，RGBA格式图像读取与保存"
version = "1.0.1"
license = {file = "LICENSE"} 



[project.urls]
Repository = "https://github.com/swan7-py/ComfyUI-ImageAlphaCrop"
#  Used by Comfy Registry https://registry.comfy.org


[tool.comfy]
PublisherId = "swan7-py"
DisplayName = "ComfyUI-ImageAlphaCrop"
Icon = ""
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

